[project]
name = "pysmlight"
dynamic = ["version"]
description = "A library implementing API control of the SMLIGHT SLZB-06 LAN Coordinators."
authors = [
    {name = "Tim Lunn", email = "tl@smlight.tech"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["smlight", "slzb-06", "zigbee"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "aiohttp>=3.9.3",
    "aiohttp_sse_client2>=0.3.0",
    "awesomeversion>=24.6.0",
    "mashumaro>=3.10",
]

[dependency-groups]
ci = [
    "pytest>=8.3.5",
    "aresponses>=3.0.0",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "coverage[toml]",
    "pytest-github-actions-annotate-failures",
    "pytest-xdist",
    "pre-commit",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
]

[project.urls]
Repository = "https://github.com/smlight-workspace/pysmlight"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pysmlight/_version.py"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["pysmlight", "tests"]
extend-exclude = ["pysmlight/_version.py"]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # autoflake
    "F401",
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
# profile = "black"
force-sort-within-sections = true
known-first-party = ["pysmlight", "tests"]
forced-separate = ["tests"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--showlocals --verbose"
testpaths = ["tests"]
timeout = 20
log_format = "%(asctime)s.%(msecs)03d %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
show_error_context = true
disable_error_code = [
	"attr-defined",
	"arg-type",
]
exclude = [
	"pysmlight/_version.py",
]
